add .pems to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 #Don't upload private configuration details!
 config.sh
+*.pem
 
 #from https://github.com/github/gitignore/blob/master/Python.gitignore
 # Byte-compiled / optimized / DLL files
